<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/toolbar_margin"
        android:background="@color/bid_machine_yellow"
        app:title="@string/choose_ad_type"
        app:titleTextColor="@color/colorText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bBanner"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/banner"
        android:textSize="@dimen/button_text_size"
        app:strokeColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bInterstitial"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/interstitial"
        android:textSize="@dimen/button_text_size"
        app:strokeColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bVideo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/video"
        android:textSize="@dimen/button_text_size"
        app:strokeColor="@color/colorAccent" />

</LinearLayout>