<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbar_margin"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bid_machine_yellow"
            app:menu="@menu/menu_ad_manager"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/choose_action"
            app:titleTextColor="@color/colorText" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="-2dp"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bLoad"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/load_ad"
        android:textSize="@dimen/button_text_size"
        app:strokeColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bShow"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:enabled="false"
        android:text="@string/Show_ad"
        android:textSize="@dimen/button_text_size"
        app:strokeColor="@color/colorAccent" />

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>